--- a/WebRoot/index.html
+++ b/WebRoot/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
 	<head>
-		<title>驴圈</title>
-		<meta http-equiv="Content-type" content="text/html; charset=utf8"/>
+		<title>驴圈 Travelers Stable</title>
+		<meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
 		<script type="text/javascript" src="static/js/jquery.js"></script>
 		<script type="text/javascript" src="static/js/mousewheel.jquery.js"></script>
 		<script type="text/javascript" src="static/js/config.js"></script>
+		<script type="text/javascript" src="static/js/language.js"></script>
 		<script type="text/javascript" src="static/js/common.js"></script>
 		<script type="text/javascript" src="static/js/mainframe.js"></script>
 		<script type="text/javascript" src="static/js/flowview.js"></script>
@@ -14,34 +15,5 @@
 		<link rel="stylesheet" type="text/css" href="static/css/mainframe.css"/>
 	</head>
 	<body>
-		<div class="background">
-			<div></div>
-		</div>
-		<div class="foreground">
-			<div class="head">
-				<a class="logo">
-					<h1>驴圈</h1>
-					旅游、分享、交友
-				</a>
-				<ul id="tabs">
-				</ul>
-			</div>
-			<div class="body">
-			</div>
-		</div>
-		<div class="foot">
-			<ul class="main-bar menu">
-				<li>
-					<i class="icon-wrench white"></i> 设置
-					<ul class="menu">
-						<li><i class="icon-picture white"></i> 更换背景<ul class="menu" id="backgrounds-list"></ul></li>
-						<li><i class="icon-user white"></i> <a href="#profile">个人资料设置</a></li>
-					</ul>
-				</li>
-				<li><i class="icon-tag white"></i> 站内消息</li>
-				<li onclick="showFriends()"><i class="icon-list white"></i> 好友列表</li>
-			</ul>
-			<div class="extra"></div>
-		</div>
 	</body>
 </html>
