--- a/WebRoot/main.html
+++ b/WebRoot/main.html
@@ -35,3 +35,12 @@
 	</ul>
 	<div class="extra"></div>
 </div>
+<div class="modal hide fade" id="userinfo">
+	<div class="modal-header">
+		<button class="close" data-dismiss="modal">&times;</button>
+		<h1>
+		</h1>
+	</div>
+	<div class="modal-body">
+	</div>
+</div>
