--- a/WebRoot/main.html
+++ b/WebRoot/main.html
@@ -38,9 +38,33 @@
 <div class="modal hide fade" id="userinfo">
 	<div class="modal-header">
 		<button class="close" data-dismiss="modal">&times;</button>
-		<h1>
-		</h1>
+		<h1></h1>
 	</div>
 	<div class="modal-body">
+		<h5>联系电话</h5>
+		<span class="phone"></span>
+		<h5>自我简述</h5>
+		<textarea class="intro" style="width: 99%" readonly></textarea>
+	</div>
+	<div class="modal-footer">
+		<div class="btn-group">
+			<a class="btn tourlist">Ta的记忆</a>
+			<a class="btn album">Ta的影集</a>
+		</div>
+		<div class="btn-group">
+			<button class="btn btn-primary follow">关注</button>
+			<button class="btn unfollow">取消关注</button>
+		</div>
+	</div>
+</div>
+<div class="modal hide fade" id="alert" style="width:300px; margin-left: -150px; margin-top: 50px">
+	<div class="modal-header">
+		<button class="close" data-dismiss="modal">&times;</button>
+		<h3>系统提示</h3>
+	</div>
+	<div class="modal-body">
+	</div>
+	<div class="modal-footer">
+		<button class="btn btn-primary" data-dismiss="modal">知道了</button>
 	</div>
 </div>
