--- a/WebRoot/main.html
+++ b/WebRoot/main.html
@@ -57,7 +57,7 @@
 		</div>
 	</div>
 </div>
-<div class="modal hide fade" id="alert" style="width:300px; margin-left: -150px; margin-top: 50px">
+<div class="modal hide fade" id="alertDlg" style="width:300px; margin-left: -150px; margin-top: 50px">
 	<div class="modal-header">
 		<button class="close" data-dismiss="modal">&times;</button>
 		<h3>系统提示</h3>
@@ -66,5 +66,21 @@
 	</div>
 	<div class="modal-footer">
 		<button class="btn btn-primary" data-dismiss="modal">知道了</button>
+	</div>
+</div>
+
+
+<div class="modal hide fade" id="confirmDlg" style="width:300px; margin-left: -150px; margin-top: 50px">
+	<div class="modal-header">
+		<button class="close" data-dismiss="modal">&times;</button>
+		<h3>操作确认</h3>
+	</div>
+	<div class="modal-body">
+	</div>
+	<div class="modal-footer">
+		<div class="btn-group">
+			<button class="btn btn-danger" data-dismiss="modal" id="ok">确定</button>
+			<button class="btn" data-dismiss="modal">取消</button>
+		</div>
 	</div>
 </div>
