--- a/WebRoot/main.html
+++ b/WebRoot/main.html
@@ -26,7 +26,11 @@
 				<li><a href="#profile"><i class="icon-user white"></i> %{Set_Profile}</a></li>
 			</ul>
 		</li>
-		<li><i class="icon-tag white"></i> %{Site_Message}</li>
+		<li id="messageBar">
+			<i class="icon-tag white"></i> %{Site_Message} <span class="counter"></span>
+			<ul class="menu" style="width: 400px">
+			</ul>
+		</li>
 		<li onclick="showFriends()"><i class="icon-list white"></i> %{Friend_List}</li>
 		<li id="username" ><i class="icon-user white"></i> 
 			<span></span>
@@ -50,10 +54,27 @@
 		<div class="btn-group">
 			<a class="btn tourlist">Ta的记忆</a>
 			<a class="btn album">Ta的影集</a>
+			<button class="btn sendmsg">发送短消息</button>
 		</div>
 		<div class="btn-group">
 			<button class="btn btn-primary follow">关注</button>
 			<button class="btn unfollow">取消关注</button>
+		</div>
+	</div>
+</div>
+<div class="modal hide fade" id="msgDlg" style="width:250px; margin-left: -125px; margin-top: 100px">
+	<div class="modal-header">
+		<button class="close" data-dismiss="modal">&times;</button>
+		<h3>站内消息</h3>
+	</div>
+	<div class="modal-body">
+		<b>To: <span class="touser"></span><br/></b>
+		<input type="text" id="msgtext"/>
+	</div>
+	<div class="modal-footer">
+		<div class="btn-group">
+			<button class="btn" data-dismiss="modal">取消</button>
+			<button class="btn btn-primary">发送</button>
 		</div>
 	</div>
 </div>
@@ -68,8 +89,6 @@
 		<button class="btn btn-primary" data-dismiss="modal">知道了</button>
 	</div>
 </div>
-
-
 <div class="modal hide fade" id="confirmDlg" style="width:300px; margin-left: -150px; margin-top: 50px">
 	<div class="modal-header">
 		<button class="close" data-dismiss="modal">&times;</button>
