--- a/WebRoot/index.html
+++ b/WebRoot/index.html
@@ -4,6 +4,7 @@
 		<title>驴圈 Travelers Stable</title>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
 		<script type="text/javascript" src="static/js/jquery.js"></script>
+		<script type="text/javascript" src="static/js/jqueryui.js"></script>
 		<script type="text/javascript" src="static/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="static/js/mousewheel.jquery.js"></script>
 		<script type="text/javascript" src="static/js/config.js"></script>
@@ -16,6 +17,7 @@
 		<link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css"/>
 		<link rel="stylesheet" type="text/css" href="static/css/common.css"/>
 		<link rel="stylesheet" type="text/css" href="static/css/mainframe.css"/>
+		<link rel="stylesheet" type="text/css" href="static/css/jqueryui.css"/>
 	</head>
 	<body>
 	</body>
